--- a/style.css
+++ b/style.css
@@ -1,50 +1,53 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
-}
-.aaa {
+  }
+  .header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
-}
-.aaa img {
+  }
+  .header__logo {
     width: 100%;
-}
-.aaa .more_inf {
+  }
+  .header__info-link {
     font-family: fantasy, cursive;
-}
-
-@media (max-width:768px) {
-.aaa { text-align: center;
-}
-}
-.centered-main-page-element {
+  }
+  
+  @media (max-width: 768px) {
+    .header {
+      text-align: center;
+    }
+  }
+  .main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
-}
-.task {
+  }
+  .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
-}
-.task-row-wrapper {
+    flex-grow: 1;
+  }
+  .section__add-task {
     display: flex;
-}
-ul {
-    margin:0;
+  }
+  .section__list {
+    margin: 0;
     padding: 0px;
-}
-li, h3 {
-    list-style:none;
-}
-input,button{
-    outline:none;
-}
-button {
+  }
+  .section__list-item,
+  .section__title {
+    list-style: none;
+  }
+  .section__input,
+  .section__btn {
+    outline: none;
+  }
+  .section__btn {
     background: none;
     border: 0px;
     color: #888;
@@ -52,13 +55,12 @@ button {
     width: 60px;
     font-family: Lato, sans-serif;
     cursor: pointer;
-}
-button:hover {
+  }
+  .section__btn:hover {
     color: #3a3A3a;
-}
-/* Heading */
-h3,
-label[for='new-task'] {
+  }
+  /* Heading */
+  .section__title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -66,8 +68,8 @@ label[for='new-task'] {
     padding: 30px 0 10px;
     margin: 0;
     text-transform: uppercase;
-}
-input[type="text"] {
+  }
+  .section__input--text {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -78,71 +80,72 @@ input[type="text"] {
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
-}
-input[type="text"]:focus {
+  }
+  .section__input--text:focus {
     color: #333;
-}
-
-/* New Task */
-label[for='new-task'] {
+  }
+  
+  /* New Task */
+  .section__title--top {
     display: block;
     margin: 0 0 20px;
-}
-input#new-task {
+  }
+  .section__input--new-task {
     width: 318px;
-}
-
-/* Task list */
-li {
+  }
+  
+  /* Task list */
+  .section__list-item{
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-li > * {
+  }
+  .section__input ,
+  .section__label,
+  .section__btn {
     vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+  }
+  
+  .section__input--checkbox {
     margin: 0 10px;
-}
-li > label {
+  }
+  .section__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
-}
-li >    input[type="text"] {
-    width: 226px
-}
-button.delete img {
+  }
+  .section__input--task {
+    width: 226px;
+  }
+  .section__btn-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
-}
-button.delete img:hover {
+  }
+  .section__btn-img:hover {
     transform: rotateZ(0);
-}
-
-/* Completed */
-ul#completed-tasks label {
-    text-decoration: line-through
+  }
+  
+  /* Completed */
+  .section__list--completed-tasks .section__label {
+    text-decoration: line-through;
     color: #888;
-}
-
-/* Edit Task */
-ul li input[type=text] {
-    display:none
-}
-
-ul li.editMode input[type=text] {
-    display:inline-block;
-    width:224px
-}
-
-ul li.editMode label {
-    display:none;
-}
+  }
+  
+  /* Edit Task */
+  .section__input--task {
+    display: none;
+  }
+  
+  .section__list-item--edit-mode .section__input--text{
+    display: inline-block;
+    width: 224px;
+  }
+  
+  .section__list-item--edit-mode .section__label {
+    display: none;
+  }
